# control-plane-lab

./: .gitignore  KNOWN_LIMITATIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: market_failover.json  trading_fabric.json
src/control_plane_lab/: __init__.py  cli.py  loader.py  models.py  simulation.py  validation.py
tests/: test_simulation.py  test_validation.py
